scss/main.scss
@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Ubuntu&display=swap');
@import 'config';
@import 'utilities';

* {
    margin: 0;
    padding: 0;
}

body {
    line-height: 1.6;
    font-family: 'Ubuntu', sans-serif;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: white;
}

// Side Navigation Bar
.sidenav {
    position: sticky;
    display: flex;
    flex-direction: column;
    background: #000;
    height: 100vh;
    width: 75px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    overflow: visible;
    padding-top: 20px;
    align-items: center;
    justify-content: space-between;
    text-align: center;
    
    // Set Icon Color
    i {
        color: $main-color;
        border-radius: 5px;
        padding: .5rem;
        transition: all .5s;
        &:hover {
            color: black;
            font-size: 1.3rem;
            background: $main-color;
        }
    }

    // Applies Tooltip Animation to all navbar LI A
    li {
        margin: 1rem;
        position: relative;
        display: inline-block;
    }

    .tooltipinner {
        visibility: hidden;
        width: 200px;
        background: black;
        color: white;
        text-align: center;
        // border-right: 2px $main-color solid;
        border-right: 2px $secondary-color solid;
        padding: 0 1rem;

        // Position Tooltip
        position: absolute;
        z-index: 1;
        top: 0px;
        left: 130%;

        // Text Edit
        text-transform: uppercase;
        font-size: 1.5rem;

        opacity: 0;
        transition: opacity .5s;
    }

    li:hover .tooltipinner {
        visibility: visible;
        opacity: 1;
        border-bottom: none;
    }
    // LI A Animation End


    // Sidebar Logo
    .logo {
        img {
            width: 60px;
            height: 60px;
            // border-radius: 50%;
        }
    }

    // Social Media Links
    .social-media {
        margin-bottom: 2.5rem;
        color: #fff;
        ul li {
            margin: .5rem 1rem;
        }
    }
}


// Core Page Content
section {
    width: 100vw;
    height: 100vh;
}

.all-content-outer {
    // Using Viewport HEIGHT as the width and Viewport WIDTH as the height
    width: 100vh;
    height: 100vw;
    // Rotate the outer wrapper to flip content
    // If we don't translate we won't see any content
    transform: rotate(-90deg) translateX(-100vh);
    transform-origin: top left;
    overflow-y: scroll;
    overflow-x: hidden;

    position: absolute;

    // Scroll bar appears on top of page horizontally
    // Firefox scroll bar disable
    scrollbar-width: none;
    
    // This ms-overflow is obsolete and no longer supported... not sure what the replacement is 
    // For IE
    -ms-overflow-style:none;
}

// Chrome & Safari
::-webkit-scrollbar {
    display: none;
}

.all-content-inner {
    display: flex;
    flex-direction: row;
    width: 400vw;

    // Using same transform as outter wrapper to undo inner wrapper rotate
    // If we don't translate we won't see any content
    transform: rotate(90deg) translateY(-100vh);
    transform-origin: top left;
}


// Color Test For Sections
#home {
    position: relative;
    justify-content: center;
    text-align: center;
    display: inline-block;
    // Overlay for background image
    background: rgba($color: #000000, $alpha: .5);
    color: white;

    // On smaller pages the nav bar blocks content
    // margin-left: 75px;
    // padding: 0 75px;
    
    padding-top: 15rem;

    // Name Title
    h1 {
        // text-transform: uppercase;
        font-size: 4rem;
    
        padding: 0 2rem;
    }

    // Tag Above Name
    h2 {
        padding: 0 1.5rem;
        text-align: center;
        margin-left: -40%;
    }

    p {
        font-size: 1.5rem;
        width: 50%;
        margin-left: 25%;
        text-decoration: wavy;
    }

    .bottom-line {
        margin-top: 1rem;
        margin-bottom: 3rem;
        width: 5rem;
    }

    
}

// Using Home BEFORE to put the image behind the home which has a transparent background as an overlay
#home::before {
    content: '';
    background: $bg-img no-repeat center center/cover;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

#work {
    background: #f4f4f4;

    h1 {
        text-transform: uppercase;
        font-size: 2rem;
    }

    .projects {
        display: grid;
        grid-template-columns: repeat(3, 1fr);

        .box {
            position: relative;
            .img {
                width: 100px;
                height: 100px;
            }
        }
    }
}

#contact {
    background: crimson;
}

#fluff {
    background: darkgoldenrod;
}

